--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ img {
 }
 
 .container {
-  width: 1600px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -56,7 +56,30 @@ img {
 
 /* ============ HEADER ============ */
 
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav {
+  display: flex;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+
+  padding: 32px 0 32px 0;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .logo {
+  margin-right: 95px;
+  padding: 25px 0 25px 0;
+
   font-family: var(--additional-font);
   font-weight: 700;
   font-size: 26px;
@@ -88,6 +111,11 @@ img {
 }
 
 .mail-link {
+  margin-left: auto;
+  margin-right: 50px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
@@ -102,6 +130,9 @@ img {
 }
 
 .tel-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
