--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --accent-color-cont: rgba(255, 255, 255, 0.6);
   --accent-color-logo: #000000;
   --accent-color-team: #f5f4fa;
+  --accent-color-port: #eeeeee;
   --btn-hover: #188ce8;
 }
 
@@ -49,9 +50,9 @@ img {
 
 .container {
   width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 15px;
 }
 
 .section {
@@ -365,16 +366,27 @@ img {
 
 .btn-menu {
   display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.btn-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .btn-list {
+  padding: 6px 22px;
+
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  border: none;
+  border-radius: 4px;
   color: var(--accent-color-title);
+  background-color: var(--accent-color-team);
 }
 
 .btn-list.current {
@@ -389,6 +401,28 @@ img {
 }
 
 /* ============ PICTURES LIST ============ */
+
+.port-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+}
+
+.portfolio-item {
+  flex-basis: calc((100% - 270px) / 9);
+  margin-left: 30px;
+  margin-bottom: 30px;
+
+  background: var(--accent-color-text);
+}
+
+.port-item-desc {
+  border: 1px solid var(--accent-color-port);
+  padding-left: 25px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
 .port-title {
   font-family: var(--main-font);
